@@ -579,15 +579,21 @@ function getItemCaptureDate($file, $exifData = array()) {
 
 		switch($exifSupported) {
 			case 'exiftags':
-				if (isset($exifData['Image Created'])) {
+				if (isset($exifData['Image Generated'])) {
+					$tempDate = split(" ", $exifData['Image Generated'], 2);
+				}
+				elseif (isset($exifData['Image Created'])) {
 					$tempDate = split(" ", $exifData['Image Created'], 2);
 				}
-				break;
+				
+			break;
+			
 			case 'jhead':
 				if (isset($exifData['Date/Time'])) {
 					$tempDate = split(" ", $exifData['Date/Time'], 2);
 				}
-				break;
+				
+			break;
 		}
 
 		if (!empty($tempDate)) {
@@ -849,8 +855,8 @@ function getOS () {
 function generate_password($len = 10) {
 	$result = '';
 	$alpha  = 'abcdefghijklmnopqrstuvwxyz' .
-			  '0123456789' .
-			  'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+		  '0123456789' .
+		  'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
 
 	$size = strlen($alpha) - 1;
 	$used = array();
